--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.4.7",
     "handlebars": "^4.7.8",
     "nodemailer": "^6.10.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.2"
   },
@@ -49,6 +50,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^22.13.9",
     "@types/nodemailer": "^6.4.17",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@typescript-eslint/parser": "^8.26.0",
@@ -56,6 +58,7 @@
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "jest": "^29.5.0",
     "prettier": "^3.5.3",
     "prisma": "^6.4.1",
