--- a/.gitignore
+++ b/.gitignore
@@ -74,9 +74,12 @@ web_modules/
 
 # dotenv environment variable files
 .env
+.env.development
 .env.development.local
 .env.test.local
+.env.production
 .env.production.local
+.env.staging
 .env.local
 
 # parcel-bundler cache (https://parceljs.org/)
