--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.11",
     "@nestjs/config": "^4.0.1",
@@ -38,6 +39,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "handlebars": "^4.7.8",
+    "ioredis": "^5.6.0",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
