--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
     "@nestjs/platform-express": "^11.0.11",
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/swagger": "^11.0.6",
+    "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.4.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "cross-env": "^7.0.3",
+    "csrf-csrf": "^3.1.0",
     "dotenv": "^16.4.7",
     "handlebars": "^4.7.8",
+    "helmet": "^8.1.0",
     "ioredis": "^5.6.0",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
@@ -52,7 +55,7 @@
     "@nestjs/cli": "^11.0.5",
     "@nestjs/schematics": "^11.0.2",
     "@nestjs/testing": "^11.0.11",
-    "@stylistic/eslint-plugin-ts": "^2.12.1",
+    "@stylistic/eslint-plugin-ts": "^4.2.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
