--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ioredis": "^5.6.0",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
@@ -62,6 +63,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^22.13.9",
     "@types/nodemailer": "^6.4.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
