--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cookie-parser": "^1.4.7",
     "cross-env": "^7.0.3",
     "csrf-csrf": "^3.1.0",
+    "discord.js": "^14.19.3",
     "dotenv": "^16.4.7",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
