--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
+    "passport-discord": "^0.1.4",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -76,6 +77,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.9",
     "@types/nodemailer": "^6.4.17",
+    "@types/passport-discord": "^0.1.14",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
