--- a/package.json
+++ b/package.json
@@ -19,20 +19,19 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "neon:reset": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" prisma migrate reset",
-    "neon:reset:force": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" prisma migrate reset --force",
-    "neon:generate": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" prisma generate",
-    "neon:migrate:create": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" prisma migrate dev --create-only --name",
-    "neon:migrate:dev": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" prisma migrate dev --name",
-    "neon:migrate:deploy": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" prisma migrate deploy",
-    "neon:db:push": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" prisma db push",
-    "neon:db:pull": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" prisma db pull"
+    "neon:reset": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" npx prisma migrate reset",
+    "neon:reset:force": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" npx prisma migrate reset --force",
+    "neon:generate": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" npx prisma generate",
+    "neon:migrate:create": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" npx prisma migrate dev --create-only --name",
+    "neon:migrate:dev": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" npx prisma migrate dev --name",
+    "neon:migrate:deploy": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" npx prisma migrate deploy",
+    "neon:db:push": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" npx prisma db push",
+    "neon:db:pull": "cross-env DATABASE_URL=\"postgresql://neondb_owner:npg_ruUJ6cn7FfYC@ep-aged-band-a91361as-pooler.gwc.azure.neon.tech/neondb?sslmode=require\" npx prisma db pull"
   },
   "dependencies": {
     "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^4.0.0",
-    "@nestjs/cli": "^11.0.7",
     "@nestjs/common": "^11.0.11",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.11",
@@ -63,13 +62,13 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "prisma": "^6.11.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@nestjs/cli": "^11.0.5",
     "@nestjs/schematics": "^11.0.2",
     "@nestjs/testing": "^11.0.11",
     "@stylistic/eslint-plugin-ts": "^2.13.0",
@@ -94,6 +93,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.5.3",
+    "prisma": "^6.6.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
